Füge Benutzeranmeldung und Registrierung hinzu, implementiere Sicherheitskonfiguration und speichere Passwörter verschlüsselt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=learningjournal
 
 # H2-Datenbank konfigurieren
-spring.datasource.url=jdbc:h2:mem:learningjournal
+spring.datasource.url=jdbc:h2:file:./data/learningjournal
+spring.jpa.generate-ddl=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=123
@@ -10,3 +11,16 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # H2-Konsole aktivieren
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# Logs
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework=DEBUG
+logging.level.com.samuel.learningjournal=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+logging.file.name=logs/learningjournal.log
+
+# spring.security.user.name=admin
+# spring.security.user.password=$2a$10$qbp1RACg.b7wIcpgt4O5NeeiIJasJAAaw6daRq1SPN4oUhALINih.
+# spring.security.user.roles=USER
